avviddec: Release stream lock while calling avcodec_decode_video2()

It might call back into us from another thread and try to take the stream lock
again, e.g. to allocate a buffer.

https://bugzilla.gnome.org/show_bug.cgi?id=726020